Chat feature just added.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "*",
     "express": "*",
     "nodemon": "*",
-    "pug": "*"
+    "pug": "*",
+    "socket.io": "*",
+    "xss": "*"
   }
 }
