--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-hotkeys-hook": "^3.4.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-snowfall": "^1.1.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
