--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 HOST="192.168.0.107"
+DB_URL="mongodb+srv://app:7qHmN6blZGI3R4rMcag2uxQie@mindall-db.59ib4.mongodb.net/mindall?retryWrites=true&w=majority"
