--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.9",
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -51,6 +43,15 @@
     ]
   },
   "devDependencies": {
-    "@types/react-alert": "^5.2.1"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-alert": "^5.2.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.9",
+    "node-sass": "^5.0.0"
   }
 }
