--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "mindall-app",
   "version": "2.0.0",
-  "description": "App for encoding messages with cipher based on periodic table.",
+  "description": "App for encoding messages via periodic table.",
   "main": "server.js",
+  "engines": {
+    "node": "14.17.x"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
