Fix npm issues to get working client

--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,13 @@
     "react-dom": "^17.0.2",
     "react-hotkeys-hook": "^3.4.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "BROWSER=none react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +50,6 @@
     "@types/react-alert": "^5.2.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.9",
-    "node-sass": "^5.0.0"
+    "node-sass": "^8.0.0"
   }
 }
