--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -15,6 +15,7 @@
     "react-hotkeys-hook": "^3.4.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-snowfall": "^1.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
