--- a/client/package.json
+++ b/client/package.json
@@ -1,56 +1,34 @@
 {
-  "name": "client",
-  "version": "3.0.0",
+  "name": "mindall-client",
   "private": true,
+  "version": "3.0.0",
+  "author": {
+    "name": "Little Kwinso",
+    "url": "https://github.com/kwinso"
+  },
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.3.1",
-    "axios": "^0.21.4",
-    "react": "^17.0.2",
+    "axios": "^1.2.2",
+    "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
-    "react-dom": "^17.0.2",
-    "react-hotkeys-hook": "^3.4.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "react-snowfall": "^1.2.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "BROWSER=none react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
+    "react-snowfall": "^1.2.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-alert": "^5.2.1",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.9",
-    "node-sass": "^8.0.0"
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-alert": "^7.0.2",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "sass": "^1.57.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
   }
 }
